--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,59 @@
-<h1>lasagna</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1><strong> Lasagna </strong></h1>
+  <p><img src="../photos/tumblr_ofdoyk60kP1t2rr2bo1_1280.jpeg" alt="cooked lasagna"></p>
+
+  <p>Lasagna is a wide, flat sheet of pasta. Lasagna can refer to either the type of noodle or to the typical lasagna dish 
+  which is a dish made with several 
+  layers of lasagna sheets with sauce and other ingredients, such as meats and cheese, in between the lasagna noodles.</p>
+
+  Originally, the word lasagna was used to describe a pot in which food was being cooked rather than the pasta itself.  
+  Lasagna recipes have been around for ages, dating back to as early as the thirteenth century.  
+  Today, lasagnas come in all kinds of varieties from veggies and cream sauces to traditional sauce and cheese lasagnas as well as meat lasagnas.
+  Originated in Italy during the middle ages, lasagna has been attributed to the city of Naples.
+
+  <H2>Ingredients</H2>
+  <ul>
+    <li>2 teaspoons extra virgin olive oil</li>
+    <li>1 pound ground beef chuck</li>
+    <li>1/2 medium onion, diced (about 3/4 cup)</li>
+    <li>1/2 large bell pepper (green, red, or yellow), diced (about 3/4 cup)</li>
+    <li>2 cloves garlic, minced</li>
+    <li>1 (28-ounce)can good-quality tomato sauce</li>
+    <li>3 ounces tomato paste (half a 6-ounce can)</li>
+    <li>1 (14 ounce) can crushed tomatoes</li>
+    <li>2 tablespoons chopped fresh oregano, or 2 teaspoons dried oregano</li>
+    <li>1/4 cup chopped fresh parsley (preferably flat leaf), packed</li>
+    <li>1 tablespoon Italian seasoning</li>
+    <li>1 pinch garlic powder and/or garlic salt</li>
+    <li>1 tablespoon red or white wine vinegar</li>
+    <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
+    <li>salt</li>
+    
+  </ul>
+
+  <h2>Steps</h2>
+
+  <ol>
+    <li>Put pasta water on to boil</li>
+    <li>Brown the ground beef</li>
+    <li>Cook the bell pepper, onions, garlic, add back the beef</li>
+    <li>Transfer to medium sized pot, add tomatoes and remaining sauce ingredients to build the sauce</li>
+    <li>Boil and drain the lasagna noodles</li>
+    <li>Heat the oven to 375°F</li>
+    <li>Assemble the lasagna</li>
+    <li>Bake</li>
+    <li>Cool and serve</li>
+    
+  </ol>
+
+</body>
+</html>
+
