--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <p><img src="photos/ghibli-food-feat.webp" alt="ghibli-food-feat"></p>
-    <a href="recipes/lasagna.html">lasagna</a>
-    <a href="">Ramen</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">lasagna</a></li>
+        <li><a href="recipes/ramen.html">Ramen</a></li>
+    </ul>
+    
+    
 </body>
 </html>
