added hamburger part

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><strong>Ramen</strong></h1>
-    <p><img src="../photos/20220711-209900-header-696x506.jpg" alt="cooked lasagna"></p>
+    <p><img src="../photos/20220711-209900-header-696x506.jpg" alt="cooked Ramen"></p>
   
     <p>Ramen has taken the western world by storm, but what is this dish and what has led to it being so popular all across the world?</p>
 
@@ -18,7 +18,8 @@
         In Japan ramen is considered a fast food, with many small restaurants and street vendors offering a warming bowl of this delicious soup.
 
     
-    <H2>Ingredients</H2>
+    <h1>Ingredients</H1>
+
     <ul>
       <li>Miso</li>
       <li>Doubanjiang (spicy or non-spicy bean paste)</li>
@@ -27,7 +28,7 @@
       <li>White pepper powder</li>
     </ul>
   
-    <h2>Steps</h2>
+    <h1>Steps</h1>
   
     <ol>
       <li>Bring the water to a boil.</li>
