--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <p><img src="photos/ghibli-food-feat.webp" alt="ghibli-food-feat"></p>
-    <ul>
+    <ol>
         <li><a href="recipes/lasagna.html">lasagna</a></li>
         <li><a href="recipes/ramen.html">Ramen</a></li>
-    </ul>
+        <li><a href="recipes/hamburger.html">Hamburger</a></li>
+    </ol>
     
     
 </body>
