--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -18,7 +18,7 @@
      Hamburgers were originally called "hamburg steak," named for the German city of Hamburg, although no actual connection between 
      the place and the food has ever been documented.
 
-    <H2>Ingredients</H2>
+    <h1>Ingredients</h1>
 
     <ul>
       <li>1 pound ground lean (7% fat) beef</li>
