--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -19,7 +19,7 @@
   Today, lasagnas come in all kinds of varieties from veggies and cream sauces to traditional sauce and cheese lasagnas as well as meat lasagnas.
   Originated in Italy during the middle ages, lasagna has been attributed to the city of Naples.
 
-  <H2>Ingredients</H2>
+  <h1>Ingredients</h1>
   <ul>
     <li>2 teaspoons extra virgin olive oil</li>
     <li>1 pound ground beef chuck</li>
