main page changes

--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -18,7 +18,7 @@
         In Japan ramen is considered a fast food, with many small restaurants and street vendors offering a warming bowl of this delicious soup.
 
     
-    <h1>Ingredients</H1>
+    <h1>Ingredients</h1>
 
     <ul>
       <li>Miso</li>
