--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <p><img src="photos/ghibli-food-feat.webp" alt="ghibli-food-feat"></p>
-    <ol>
-        <li><a href="recipes/lasagna.html">lasagna</a></li>
-        <li><a href="recipes/ramen.html">Ramen</a></li>
-        <li><a href="recipes/hamburger.html">Hamburger</a></li>
+    <h2 class="title">Odin Recipes</h2>
+    <div class="image-container"><img src="photos/ghibli-food-feat.webp" alt="ghibli-food-feat"></div>
+    <ol class="ordered-list">
+        <li ><a class="list" href="recipes/lasagna.html">lasagna</a></li>
+        <li ><a class="list" href="recipes/ramen.html">Ramen</a></li>
+        <li ><a class="list" href="recipes/hamburger.html">Hamburger</a></li>
     </ol>
     
     
