changed every pages string and text location

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1><strong> Lasagna </strong></h1>
-  <p><img src="../photos/tumblr_ofdoyk60kP1t2rr2bo1_1280.jpeg" alt="cooked lasagna"></p>
+    <h1 class="title"><strong> Lasagna </strong></h1>
+  <div class="image-container"><img src="../photos/tumblr_ofdoyk60kP1t2rr2bo1_1280.jpeg" alt="cooked lasagna"></div>
 
-  <p>Lasagna is a wide, flat sheet of pasta. Lasagna can refer to either the type of noodle or to the typical lasagna dish 
+  <p class="paragraph">Lasagna is a wide, flat sheet of pasta. Lasagna can refer to either the type of noodle or to the typical lasagna dish 
   which is a dish made with several 
   layers of lasagna sheets with sauce and other ingredients, such as meats and cheese, in between the lasagna noodles.</p>
 
-  Originally, the word lasagna was used to describe a pot in which food was being cooked rather than the pasta itself.  
+  <p class="paragraph">the word lasagna was used to describe a pot in which food was being cooked rather than the pasta itself.  
   Lasagna recipes have been around for ages, dating back to as early as the thirteenth century.  
   Today, lasagnas come in all kinds of varieties from veggies and cream sauces to traditional sauce and cheese lasagnas as well as meat lasagnas.
-  Originated in Italy during the middle ages, lasagna has been attributed to the city of Naples.
+  Originated in Italy during the middle ages, lasagna has been attributed to the city of Naples.</p>
 
   <h1>Ingredients</h1>
-  <ul>
+  <ul class="unordered-list">
     <li>2 teaspoons extra virgin olive oil</li>
     <li>1 pound ground beef chuck</li>
     <li>1/2 medium onion, diced (about 3/4 cup)</li>
@@ -41,11 +42,11 @@
 
   <h2>Steps</h2>
 
-  <ol>
+  <ol class="unordered-list">
     <li>Put pasta water on to boil</li>
     <li>Brown the ground beef</li>
     <li>Cook the bell pepper, onions, garlic, add back the beef</li>
-    <li>Transfer to medium sized pot, add tomatoes and remaining sauce ingredients to build the sauce</li>
+    <li>Transfer to medium sized pot, add tomatoes and remaining sauce ingredients</li>
     <li>Boil and drain the lasagna noodles</li>
     <li>Heat the oven to 375°F</li>
     <li>Assemble the lasagna</li>
