--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1><strong>Hamburger</strong></h1>
-    <p><img src="../photos/5f438421f224415635ac1d1c_OB_8 Anime Snacks To Eat When Binging Your Favorite Anime_Heading_Anime Snacks- Hamburger.jpg" alt="cooked Hamburger"></p>
+    <h1 class="title"><strong>Hamburger</strong></h1>
+  <div class="image-container"><img src="../photos/5f438421f224415635ac1d1c_OB_8 Anime Snacks To Eat When Binging Your Favorite Anime_Heading_Anime Snacks- Hamburger.jpg" alt="cooked Hamburger"></div>
   
-     <p>hamburger is a sandwich consisting of a cooked meat patty on a bun or roll.
+     <p class="paragraph">hamburger is a sandwich consisting of a cooked meat patty on a bun or roll.
      You can order a hamburger, fries, and a shake at most fast food restaurants.</p>
 
-     Hamburgers are traditionally made with ground beef and served with onions, tomatoes, lettuce, ketchup, and other garnishes.
+     <p class="paragraph"> are traditionally made with ground beef and served with onions, tomatoes, lettuce, ketchup, and other garnishes.
      You can also make a hamburger with turkey or other kinds of meat — although rarely, if ever, is ham used in a hamburger. 
      Hamburgers were originally called "hamburg steak," named for the German city of Hamburg, although no actual connection between 
-     the place and the food has ever been documented.
+     the place and the food has ever been documented.</p>
 
     <h1>Ingredients</h1>
 
-    <ul>
+    <ul class="unordered-list">
       <li>1 pound ground lean (7% fat) beef</li>
       <li>1 large egg</li>
       <li>1/2 cup minced onion</li>
@@ -39,7 +40,7 @@
   
     <h2>Steps</h2>
   
-    <ol>
+    <ol class="paragraph">
       <li>In a bowl, mix ground beef, egg, onion, bread crumbs, Worcestershire, garlic, 1/2 teaspoon salt, and 1/4 teaspoon pepper until well blended.
          Divide mixture into four equal portions and shape each into a patty about 4 inches wide.</li>
       <li>Lay burgers on an oiled barbecue grill over a solid bed of hot coals or high heat on a gas grill (you can hold your hand at grill level only 2 to 3
