--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1><strong>Ramen</strong></h1>
-    <p><img src="../photos/20220711-209900-header-696x506.jpg" alt="cooked Ramen"></p>
+    <h1 class="title"><strong>Ramen</strong></h1>
+    <div class="image-container"><img src="../photos/20220711-209900-header-696x506.jpg" alt="cooked Ramen"></div>
   
-    <p>Ramen has taken the western world by storm, but what is this dish and what has led to it being so popular all across the world?</p>
+    <p class="paragraph">Ramen has taken the western world by storm, but what is this dish and what has led to it being so popular all across the world?</p>
 
-    <p>Simply put, ramen is a Japanese noodle soup, with a combination of a rich flavoured broth, one of a variety of types of noodle and a 
+    <p class="paragraph">Simply put, ramen is a Japanese noodle soup, with a combination of a rich flavoured broth, one of a variety of types of noodle and a 
         selection of meats or vegetables, often topped with a boiled egg.</p>
 
-        In Japan ramen is considered a fast food, with many small restaurants and street vendors offering a warming bowl of this delicious soup.
+     <p class="paragraph">In Japan ramen is considered a fast food, with many small restaurants and street vendors offering a warming bowl of this delicious soup.</p>
 
     
     <h1>Ingredients</h1>
 
-    <ul>
+    <ul class="unordered-list">
       <li>Miso</li>
       <li>Doubanjiang (spicy or non-spicy bean paste)</li>
       <li>Sesame seeds and sesame oil</li>
@@ -30,7 +31,7 @@
   
     <h2>Steps</h2>
   
-    <ol>
+    <ol class="unordered-list">
       <li>Bring the water to a boil.</li>
       <li>Stir in the soup base.</li>
       <li>Allow the broth to cook for 1 minute. </li>
