chaged backgroun colors and buttons

--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
-<body>
+<body class="body3">
     <h1 class="title"><strong>Hamburger</strong></h1>
   <div class="image-container"><img src="../photos/5f438421f224415635ac1d1c_OB_8 Anime Snacks To Eat When Binging Your Favorite Anime_Heading_Anime Snacks- Hamburger.jpg" alt="cooked Hamburger"></div>
   
