--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
-<body>
+<body class="body2">
     <h1 class="title"><strong> Lasagna </strong></h1>
   <div class="image-container"><img src="../photos/tumblr_ofdoyk60kP1t2rr2bo1_1280.jpeg" alt="cooked lasagna"></div>
 
