--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
-<body>
+<body class="body">
     <h1 class="title"><strong>Ramen</strong></h1>
     <div class="image-container"><img src="../photos/20220711-209900-header-696x506.jpg" alt="cooked Ramen"></div>
   
