--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body4">
     <h1 class="title">Odin Recipes</h1>
-    <div class="image-container"><img src="photos/ghibli-food-feat.webp" alt="ghibli-food-feat"></div>
+    <div class="image-container"><img src="photos/giphy.gif" alt="ghibli-food-feat"></div>
     
     <p><button><a href="recipes/lasagna.html"><strong>lasagna</strong></a></button></p>
 
