changed anchors with location inside button

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1 class="title">Odin Recipes</h1>
     <div class="image-container"><img src="photos/giphy.gif" alt="ghibli-food-feat"></div>
     
-    <p><button class="main-buttons"><a href="recipes/lasagna.html"><strong>lasagna</strong></a></button></p>
+    <p><button class="main-buttons" onclick="location.href='recipes/lasagna.html'">lasagna</button></p>
 
-    <p><button class="main-buttons"><a href="recipes/ramen.html"><strong>Ramen</strong></a></button></p>
+    <p><button class="main-buttons" onclick="location.href='recipes/ramen.html'">Ramen</button></p>
 
-    <P><button class="main-buttons"><a href="recipes/hamburger.html"><strong>Hamburger</strong></a></button></P>
+    <P><button class="main-buttons" onclick="location.href='recipes/hamburger.html'">Hamburger</button></P>
     
 </body>
 </html>
