--- a/recipes/hamburger.html
+++ b/recipes/hamburger.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body class="body3">
-    <button class="back-button"><a href="../index.html">back</a></button>
+    <button class="back-button" onclick="location.href='../index.html'">back</button>
     <h1 class="title"><strong>Hamburger</strong></h1>
   <div class="image-container"><img src="../photos/5f438421f224415635ac1d1c_OB_8 Anime Snacks To Eat When Binging Your Favorite Anime_Heading_Anime Snacks- Hamburger.jpg" alt="cooked Hamburger"></div>
   
