--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body class="body2">
-  <button class="back-button"><a href="../index.html">back</a></button>
+  <button class="back-button" onclick="location.href='../index.html'">back</button>
   <h1 class="title"><strong> Lasagna </strong></h1>
   
   <div class="image-container"><img src="../photos/tumblr_ofdoyk60kP1t2rr2bo1_1280.jpeg" alt="cooked lasagna"></div>
