add flexbox on index.html

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title>Document</title>
 </head>
 <body class="body4">
-    <h1 class="title">Odin Recipes</h1>
-    <div class="image-container"><img src="photos/giphy.gif" alt="ghibli-food-feat"></div>
+
     
-    <p><button class="main-buttons" onclick="location.href='recipes/lasagna.html'">lasagna</button></p>
 
-    <p><button class="main-buttons" onclick="location.href='recipes/ramen.html'">Ramen</button></p>
-
-    <P><button class="main-buttons" onclick="location.href='recipes/hamburger.html'">Hamburger</button></P>
+    <div class="flex-container">
+      <h1 class="title">Odin Recipes</h1> 
+      <div class="image-container"><img src="photos/giphy.gif" alt="ghibli-food-feat"></div>
+      <div><button class="main-buttons" onclick="location.href='recipes/lasagna.html'">lasagna</button></div>
+      <div><button class="main-buttons" onclick="location.href='recipes/ramen.html'">Ramen</button></div>
+      <div><button class="main-buttons" onclick="location.href='recipes/hamburger.html'">Hamburger</button></div>
+    </div>
     
 </body>
 </html>
