--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
     <title>Document</title>
 </head>
 <body class="body4">
-
-    
-
-    <div class="flex-container">
+   <div class="flex-container">
       <h1 class="title">Odin Recipes</h1> 
       <div class="image-container"><img src="photos/giphy.gif" alt="ghibli-food-feat"></div>
-      <div><button class="main-buttons" onclick="location.href='recipes/lasagna.html'">lasagna</button></div>
-      <div><button class="main-buttons" onclick="location.href='recipes/ramen.html'">Ramen</button></div>
-      <div><button class="main-buttons" onclick="location.href='recipes/hamburger.html'">Hamburger</button></div>
+      <div class="btn-container"><button class="button-64" role="button" onclick="location.href='recipes/lasagna.html'"><span class="text">lasagna</span></button></div>
+      <div class="btn-container"><button class="button-64" role="button" onclick="location.href='recipes/ramen.html'"><span class="text">Ramen</span></button></div>
+      <div class="btn-container"><button class="button-64" role="button" onclick="location.href='recipes/hamburger.html'"><span class="text">Hamburger</span></button></div>
     </div>
     
 </body>
